# src/routes/tandonRoutes.js
@@ -13,7 +13,9 @@ router.post("/", verifyToken, tandonController.store);
 router.get("/area/:id_area", verifyToken, tandonController.index);
 
 router.get("/:id", verifyToken, tandonController.show);
+router.post("/pair-device/:id", verifyToken, tandonController.pairDevice);
 
 router.patch("/:id", verifyToken, tandonController.update);
 router.delete("/:id", verifyToken, tandonController.destroy);
+
 module.exports = router;
